--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "fs-extra": "^4.0.1",
     "mermaid.cli": "^0.3.1",
+    "npm-which": "^3.0.1",
     "unist-util-visit": "^1.1.3"
   },
   "devDependencies": {
