--- a/package.json
+++ b/package.json
@@ -14,27 +14,33 @@
   },
   "dependencies": {
     "fs-extra": "^4.0.1",
-    "mermaid.cli": "^0.3.1",
     "npm-which": "^3.0.1",
     "unist-util-visit": "^1.1.3"
   },
   "devDependencies": {
+    "changelog-verify": "^1.0.4",
     "eslint": "^4.2.0",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-import": "^2.0.0",
     "jest": "^21.2.1",
+    "mermaid.cli": "^0.3.1",
     "remark-parse": "^4.0.0",
     "remark-stringify": "^4.0.0",
     "to-vfile": "^2.1.2",
     "unified": "^6.1.5",
+    "version-changelog": "^2.1.0",
     "vfile": "^2.2.0"
+  },
+  "peerDependencies": {
+    "mermaid.cli": "^0.3.1"
   },
   "scripts": {
     "lint": "$(npm bin)/eslint src",
     "teardown": "rm -rf test/runtime/*",
     "test": "npm run teardown && $(npm bin)/jest",
     "test:coverage": "npm run teardown && $(npm bin)/jest --coverage --coverageReporters text text-summary",
-    "preversion": "npm run lint && npm run test"
+    "preversion": "npm run lint && npm run test",
+    "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
   "main": "src/index.js",
   "files": [
