--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "fs-extra": "^4.0.1",
-    "npm-which": "^3.0.1",
-    "unist-util-visit": "^1.1.3"
+    "unist-util-visit": "^1.1.3",
+    "which": "^1.3.0"
   },
   "devDependencies": {
     "changelog-verify": "^1.0.4",
