--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "url": "git@github.com:temando/remark-mermaid.git"
   },
   "dependencies": {
-    "fs-extra": "^4.0.1",
-    "unist-util-visit": "^1.1.3",
-    "which": "^1.3.0"
+    "unist-util-visit": "^1.1.3"
   },
   "devDependencies": {
     "changelog-verify": "^1.0.4",
